@@ -82,6 +82,7 @@ wxMSW:
 - wxRadioButtons no longer have to be consecutive in a group
 - fixed spurious selection of combobox text during resize
 - pass correct tool id (and not always -1) to EVT_TOOL_RCLICKED() handler
+- added wxRegKey::Export(file)
 
 wxWinCE:
 - Added support for MS Handheld PC 2000. This was done before 2.5.4,
